--- a/content/themes/azami2/sass/components/navigation/_menu.scss
+++ b/content/themes/azami2/sass/components/navigation/_menu.scss
@@ -67,6 +67,11 @@
 	}
 }
 
+#menu,
+.is_stuck{
+	bottom: inherit !important;
+}
+
 //Media queries
 @media #{$medium-down}{	
 	#menu{
